--- a/html/desporto.html
+++ b/html/desporto.html
@@ -19,13 +19,15 @@
 		<div class="section">
 			<div class ="text">
 			<h2>Futebol</h2>
-			<p>O futebol é um dos meus desportos favoritos.</p>
-			<p>Algumas das minhas equipes favoritas são:</p>
+			<p>O futebol é um dos meus desportos favoritos. Desde dos 5 anos jogo futebol, já estive em varias equipas como, por exemplo, o Prado, VilaVerdense, entre outros.</p>
+			<p>Algumas das minhas equipas favoritas são:</p>
 			
 			<ul>
 				<li>Real Madrid</li>
 				<li>Barcelona</li>
 				<li>Manchester City</li>
+				<li>Benfica</li>
+				<li>Liverpool</li>
 			</ul>
 		</div>
 		<img src="../img/futebol1.jpg" alt="Foto de futebol">
@@ -33,8 +35,8 @@
 		<div class="section">
 			<div class="text"> 
 			<h2>Basketball</h2>
-			<p class="texto-direita">Eu também gosto muito de jogar basquetebol.</p>
-			<p class="texto-direita">Algumas das minhas equipes favoritas:</p>
+			<p class="texto-direita">Basquetebol é um desporto que eu aprecio mas, apesar de gostar de jogar, não jogo frequentemente.</p>
+			<p class="texto-direita">Algumas das minhas equipas favoritas são:</p>
 			<ul class="texto-direita">
 				<li>Golden State Warriors</li>
 				<li>Los Angeles Lakers</li>
@@ -46,8 +48,9 @@
 		<div class="section">
 			<div class="text">
 			<h2>Futsal</h2>
-			<p>O futsal é outro desporto que eu gosto bastante.</p>
-			<p>Algumas das minhas equipas favoritas:</p>
+			<p>O futsal é outro desporto que eu gosto bastante. Joguei no Braga, no escalão de juniores, e fiz alguns treinos pelos séniores, mas acabei por voltar para o futebol. 
+				Como jogador de futsal, tive o prazer de jogar contra equipas como o Sporting, mas na época apareceu o covid-19 e acabámos por deixar de treinar. Como jogador de futsal também venci uma final four e assim subir de liga. </p>
+			<p>Algumas das minhas equipas favoritas são:</p>
 			<ul>
 				<li>Braga</li>
 				<li>Benfica</li>
