--- a/html/jogos.html
+++ b/html/jogos.html
@@ -19,7 +19,7 @@
 	<div class="section">
 		<div class="text">
 		<h2>League of Legends</h2>
-		<p>League of Legends é um jogo online gratuito para PC. Eu gosto de jogar com meus amigos nos fins de semana. Aqui está uma captura de tela do meu campeão favorito:</p>
+		<p>League of Legends é um jogo multiplayer online grátis para PC.Conta com várias personagens para jogar com diferentes habilidades, o jogo tem durçao de 15-45min podendo demorar mais um pouco.</p>
 	</div>
 	<img src="../img/League-of-Legends.jpg" alt="Captura de tela do League of Legends">
 </div>
@@ -27,7 +27,7 @@
 	<div class="section">
 		<div class="text">
 		<h2>Rocket League</h2>
-		<p>Rocket League é um jogo de futebol com carros. Eu gosto de jogar online e me divertir com os meus amigos. Aqui está uma captura de tela da minha melhor jogada:</p>
+		<p>Rocket League é um jogo de futebol com carros. Um jogo onde o jogador usa um carro para marcar golos à equipa inimiga, conta com vários carros. </p>
 
 	</div>
 		<img src="../img/rocket.jpg" alt="Captura de tela do Rocket League">
@@ -37,7 +37,7 @@
 	<div class="section">
 		<div class="text">
 		<h2>Valorant</h2>
-		<p>Valorant é um jogo de tiro em primeira pessoa gratuito para PC. Eu gosto de jogar sozinho ou com meus amigos para melhorar minhas habilidades. Aqui está uma captura de tela de uma partida em que ganhamos:</p>
+		<p>Valorant é um jogo de tiro em primeira pessoa grátis para PC. Do mesmo desenvolvedor que League of legends, conta também com vários personagens, com várias habilidades cada, com objetivo de roubar o site(se terrorista) ou defender o site(se contra-terrorista)</p>
 
 		</div>
 		<img src="../img/valorant.jpg" alt="Captura de tela do Valorant">
