--- a/html/musica.html
+++ b/html/musica.html
@@ -20,14 +20,14 @@
 		<div class="section">
 			<div class ="text">
 			<h2>Rap</h2>
-			<p>O rap tornou-se uma das formas mais influentes e populares de música em todo o mundo, especialmente entre os jovens. Alguns dos artistas de rap mais conhecidos incluem Tupac, Notorious B.I.G., Eminem, Jay-Z, Kendrick Lamar , entre muitos outros. Aqui estão alguns dos meus artistas favoritos:</p>
+			<p>O rap tornou-se uma das formas mais influentes e populares de música em todo o mundo, para mim é o meu estilo favorito entre os três. Alguns dos artistas de rap mais conhecidos incluem Tupac, Notorious B.I.G., Eminem, Jay-Z, Kendrick Lamar , entre outros, mas aqui estão alguns dos meus artistas favoritos:</p>
 			<ul>
 				<li>Eminem</li>
 				<li>Kendrick Lamar</li>
 				<li>J. Cole</li>
-        <li>NF</li>
-        <li>Hopsin</li>
-        <li>Joyner Lucas</li>
+       			<li>NF</li>
+        		<li>Hopsin</li>
+        		<li>Joyner Lucas</li>
 			</ul>
 			</div>
 		<img src="../img/Rap.jpg" alt="Artistas Rap">
@@ -36,7 +36,7 @@
 		<div class="section">
 			<div class ="text">
 			<h2>Pop</h2>
-			<p>Às vezes, gosto de ouvir músicas pop mais descontraídas. Aqui estão alguns dos meus artistas favoritos:</p>
+			<p> Pop um estilo de música mais descontraído, porém entre os três fica em terceiro na minha lista. Aqui estão alguns dos meus artistas favoritos:</p>
 
 			<ul>
 				<li>Ariana Grande</li>
@@ -52,7 +52,7 @@
 		<div class="section">
 			<div class ="text">
 			<h2>Dubstep</h2>
-			<p>O Dubstep é um género de música de dança electrónica que teve origem no início dos anos 2000 no Reino Unido. Aqui estão alguns dos meus artistas favoritos:</p>
+			<p>O Dubstep é um género de música de dança electrónica que teve origem no início dos anos 2000 no Reino Unido.É um estilo com mais batida, bass, etc.. Aqui estão alguns dos meus artistas favoritos:</p>
       		<ul>
 				<li>Skrillex</li>
 				<li>Zeds Dead</li>
