--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 			<div class="caixa">
 				<h2>Desporto</h2>
 				<img src="img/futebol.jpg" alt="foto a jogar futebol">
-				<p>Adoro fazer desporto blablabla</p>
+				<p>O desporto é o meu hobbie favorito, uma vez que faço desporto desde pequeno.</p>
 				<a href="html/desporto.html" class="saibamais">Clica aqui para saber mais</a>
 			</div>
 
 			<div class="caixa1">
 				<h2>Jogos</h2>
 				<img src="img/jogos.jpg" alt="foto de jogos">
-				<p>Quem não gosta de jogar um pouco?</p>
-				<a href="html/jogos.html" class="saibamais">Saibam mais sobre meus jogos favoritos.</a>
+				<p>Quem não gosta de jogar um pouco de jogos com os amigos?</p>
+				<a href="html/jogos.html" class="saibamais">Clica aqui para saber mais</a>
 			</div>
 
 			<div class="caixa2">
 				<h2>Música</h2>
 				<img src="img/musica.jpg" alt="foto de musica" class="img">
-				<p>Blablabla ouvir musica</p>
-				<a href="html/musica.html" class="saibamais">Saiba mais sobre meu hobby de música</a>
+				<p>Nos meus tempos livres gosto muito de ouvir música, porque me ajuda a relaxar.</p>
+				<a href="html/musica.html" class="saibamais">Clica aqui para saber mais</a>
 			</div>
 		</div>
 	</main>
